force-app/main/default/objects/Creditsafe_Company_Summary__c/Creditsafe_Company_Summary__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanySummaryV2.</description>
    <label>Creditsafe Company Summary</label>
    <nameField>
        <label>Creditsafe Company Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creditsafe Company Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>