force-app/main/default/objects/Creditsafe_Company_Summary__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>Registered company name/trading name of the business.</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>