force-app/main/default/objects/Creditsafe_Company_Summary__c/fields/Company_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Status_Description__c</fullName>
    <description>The description of the status.</description>
    <label>Company Status Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>