force-app/main/default/objects/Creditsafe_Company_Summary__c/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <description>Description of the credit score.</description>
    <label>Credit Rating Common Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>