force-app/main/default/objects/Creditsafe_Company_Summary__c/fields/Credit_Rating_Provider_Value_Max__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating_Provider_Value_Max__c</fullName>
    <description>Max value.</description>
    <label>Credit Rating Provider Value Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>